the sky is the limit

--- a/courses/templates/base.html
+++ b/courses/templates/base.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div id="header">
-            <a href="/" class="logo">Educa</a>
+            <a href="/" class="logo">ViCademY</a>
             <ul class="menu">
                 {% if request.user.is_authenticated %}
                     <li>
