stay calm and keep builting

--- a/courses/static/css/base.css
+++ b/courses/static/css/base.css
@@ -238,7 +238,7 @@ ul#course-modules li:hover {
 }
 
 #module-contents input[type=submit] {
-    color:#3fad37;
+    color:#39cc32;
     background:none;
     margin:-20px 0 0;
     padding:0;
