i go to space with the starz

--- a/courses/templates/base.html
+++ b/courses/templates/base.html
@@ -32,6 +32,8 @@
             {% endblock content %}
                 
         </div>
+        {% block include_js %}
+        {% endblock include_js %}
         <script>
             document.addEventListener('DOMContentloaded', (event)=>{
                 //DOM loaded
