--- a/courses/static/css/base.css
+++ b/courses/static/css/base.css
@@ -8,7 +8,7 @@ body {
 }
 
 a {
-    color:#3a5d38;
+    color:rgb(67, 211, 255);
     text-decoration:none;
 }
 
@@ -48,10 +48,10 @@ h1 {
 }
 
 #header {
-    background:#4dcc43;
+    background:#203e1e;
     overflow:auto;
     padding:10px 20px;
-    border-bottom:6px solid #3fad37;
+    border-bottom:6px solid #acfda6;
 }
 
 #header .logo {
@@ -126,7 +126,7 @@ h1 {
 }
 
 .contents ul a:hover {
-    color:#4dcc43;
+    color:#13eb04;
     cursor:move;
 }
 
