--- a/students/templates/students/course/detail.html
+++ b/students/templates/students/course/detail.html
@@ -31,6 +31,11 @@
                 </li>
             {% endfor %}
         </ul>
+        <h3>
+            <a href="{% url "chat:course_chat_room" object.id %}">
+                Course chat room 
+            </a>
+        </h3>
     </div>
     <div class="module">
         {%cache 600 module_contents module%}
